Update docker infra and validation
